Word wrap is fixed

--- a/src/app/components/admin/view-timesheet/viewtimesheet.component.css
+++ b/src/app/components/admin/view-timesheet/viewtimesheet.component.css
@@ -81,9 +81,7 @@ p {
     text-align: center;
   }
 
-  td {
-    text-align: center;
-  }
+  
 
   .radio-group {
     display: flex;
@@ -94,3 +92,25 @@ p {
   .radio-button {
     margin: 5px;
   }
+
+  h1, 
+  h3 { 
+      text-align: center; 
+  } 
+
+  table { 
+      border-spacing: 0px; 
+      table-layout: fixed; 
+      margin-left: auto; 
+      margin-right: auto; 
+  } 
+
+  th {       
+      border: 1px solid black; 
+  } 
+
+  td { 
+      border: 1px solid black; 
+      word-wrap: break-word; 
+      text-align: center;
+  } 
